# voip-provisioner

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  README.md  config.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/phonebook/: PhonebookForm.tsx  PhonebookList.tsx
frontend/src/components/phones/: PhoneForm.tsx  PhoneList.tsx
frontend/src/components/settings/: GlobalSettingsForm.tsx
frontend/src/hooks/: usePhonebook.ts  usePhones.ts  useSettings.ts
frontend/src/pages/: PhonebookPage.tsx  PhonesPage.tsx  SettingsPage.tsx
inventory/: phonebook.yml  phones.yml
src/provisioner/: __init__.py  config.py  exceptions.py  inventory.py  server.py  utils.py
src/provisioner/api/: __init__.py  dependencies.py  schemas.py
src/provisioner/api/routes/: __init__.py  phonebook.py  phones.py  settings.py
src/provisioner/asterisk/: __init__.py  ami_client.py  config_generator.py
src/provisioner/generators/: __init__.py  base.py  fanvil.py  yealink.py
src/provisioner/persistence/: __init__.py  backup.py  yaml_repository.py
templates/: phonebook.xml.j2
templates/asterisk/: extensions_entry.conf.j2  pjsip_aor.conf.j2  pjsip_auth.conf.j2  pjsip_endpoint.conf.j2
templates/fanvil_v64/: mac.cfg.j2  phonebook.xml.j2
templates/yealink_t23g/: mac.cfg.j2  phonebook.xml.j2
tests/: __init__.py  test_inventory.py  test_server.py  test_utils.py
tests/integration/: README.md  conftest.py  test_e2e_workflow.py  test_phone_asterisk_integration.py  test_phonebook_integration.py  test_settings_integration.py
tests/integration/docker/: docker-compose.test.yml
tests/integration/docker/asterisk/: Dockerfile  asterisk.conf  extensions.conf  manager.conf  pjsip.conf
